# rules_python_pytest

./: .gitattributes
docs/: rules.md
e2e/smoke/: BUILD.bazel
python_pytest/: defs.bzl
